apps/homepage/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
        app.kubernetes.io/name: homepage
    spec:
      automountServiceAccountToken: true
      serviceAccountName: homepage
      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:v1.11.0"
          ports:
            - containerPort: 3000
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /app/config
              name: homepage-config-files
            - mountPath: /app/config/logs
              name: homepage-config-logs
      volumes:
        - name: homepage-config-files
          configMap:
            name: homepage-config-files
        - name: homepage-config-logs
          persistentVolumeClaim:
            claimName: homepage-config-logs
