apps/homepage/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      name: http
  selector:
    app: homepage
