apps/homepage/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.kube.local.gd`)
      kind: Rule
      services:
        - name: homepage
          port: 3000
  tls: {}
